--- a/ict-fow.html
+++ b/ict-fow.html
@@ -68,7 +68,7 @@
     </section>
     <footer>
         <article class="footer-content">
-            <h3>Showcase Website</h3>
+            <h3>Alessandro Ryo</h3>
             <p>This is my showcase website</p>
             <ul class="social-media">
                 <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
