--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>Home | Alessandro Ryo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@400;700&family=Roboto:wght@500&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://kit.fontawesome.com/42c532e274.js"></script>
 </head>
 <body>
     <nav>
-        <div class="main-logo">
+        <figure class="main-logo">
             <img src="resources/main-logo.png">
-        </div>
+        </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
@@ -31,51 +32,51 @@
         </div>
     </nav>
     <header class="index-header">
-        <div class="index-main-text-container">
-            <h1>HBO-ICT?<br>Why?</h1>
-            <p>Why did I choose the HBO-ICT? What motivates me?
-            Before that, you can see my profile first.</p>
-            <a href="profile.html">Look at my profile</a>
-        </div>
-        <div> 
-            <img src="resources/home-image-1.png" class="index-main-image-container">
-        </div>
+            <div class="index-main-text-container">
+                <h1>HBO-ICT?<br>Why?</h1>
+                <p>Why did I choose the HBO-ICT? What motivates me?
+                Before that, you can see my profile first.</p>
+                <a href="profile.html">Look at my profile</a>
+            </div>
+            <div> 
+                <img src="resources/home-image-1.png" class="index-main-image-container">
+            </div>
     </header>
-    <section class="index">
-        <h1>Choosing HBO-ICT</h1>
-        <div class="index-text">
-            <p>I chose HBO-ICT at HZ University of Applied Science,
-            because since I was a kid, I really liked computers and games.
-            Then I really wanted to study in the Netherlands, far from Indonesia.
-            Studying at HZ would fit my hopes and dreams very well.
-            For more experience see my <a href="blog.html">blog</a>.</p>
-            <h3>My other opinions...</h3>
-        </div>
-        <div class="index-row">
-            <div class="index-col">
-                <h3>Passion</h3>
-                <p>Choosing HBO-ICT is my life choice and my passion is in this major.</p>
-            </div>
-            <div class="index-col">
-                <h3>Successful Figure</h3>
-                <p>I see many examples of successful figures because of their expertise in the ICT world.</p>
-            </div>
-            <div class="index-col">
-                <h3>Parent Experience</h3>
-                <p>My father have worked in IT for more than 20 years and I am often told about my father day-to-day experiences working in IT.</p>
-            </div>
-        </div>
-    </section>
+    <main>
+        <section class="index">
+            <h1>Choosing HBO-ICT</h1>
+            <article class="index-text">
+                <p>I chose HBO-ICT at HZ University of Applied Science,
+                because since I was a kid, I really liked computers and games.
+                Then I really wanted to study in the Netherlands, far from Indonesia.
+                Studying at HZ would fit my hopes and dreams very well.
+                For more experience see my <a href="blog.html">blog</a>.</p>
+                <h3>My other opinions...</h3>
+            </article>
+            <article class="index-row">
+                <article class="index-col">
+                    <h3>Passion</h3>
+                    <p>Choosing HBO-ICT is my life choice and my passion is in this major.</p>
+                </article>
+                <article class="index-col">
+                    <h3>Successful Figure</h3>
+                    <p>I see many examples of successful figures because of their expertise in the ICT world.</p>
+                </article>
+                <article class="index-col">
+                    <h3>Parent Experience</h3>
+                    <p>My father have worked in IT for more than 20 years and I am often told about my father day-to-day experiences working in IT.</p>
+                </article>
+            </article>
+        </section>
+    </main>
     <footer>
         <article class="footer-content">
-            <h3>Showcase Website</h3>
+            <h3>Alessandro Ryo</h3>
             <p>This is my showcase website</p>
             <ul class="social-media">
-                <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://www.instagram.com/alessandroryo/"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="youtube.com"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="twitter.com"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="linkedin.com"><i class="fa fa-linkedin-square"></i></a></li>
+                <li><a href="https://line.me/ti/p/bA4_EDgesf"><i class="fab fa-line"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/alessandro-ryo-877aa5173/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
         </article>
         <article class="footer-bottom">
