--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,7 @@
             <article div class="profile-row">
                 <article class="profile-col">
                     <h3>Where do I came from?</h3>
-                    <p>I came from Indonesia</p>
+                    <p>I come from Indonesia</p>
                 </article>
                 <article class="profile-col">
                     <h3>What are my hobbies?</h3>
@@ -155,7 +155,7 @@
     </main>
     <footer>
         <article class="footer-content">
-            <h3>Showcase Website</h3>
+            <h3>Alessandro Ryo</h3>
             <p>This is my showcase website</p>
             <ul class="social-media">
                 <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
