--- a/skc-feedback.html
+++ b/skc-feedback.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SKC Feedback | Alessandro Ryo</title>
+    <title>SKC First Feedback | Alessandro Ryo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,13 +36,15 @@
             <p>My first SKC feedback</p>
         </div>
     </header>
-    <section class="course">
-        <h1>Sorry, this page is not available</h1>
-        <p></p>
-    </section>
+    <main>
+        <section class="course">
+            <h1>Sorry, this page is not available</h1>
+            <p></p>
+        </section>
+    </main>
     <footer>
         <article class="footer-content">
-            <h3>Showcase Website</h3>
+            <h3>Alessandro Ryo</h3>
             <p>This is my showcase website</p>
             <ul class="social-media">
                 <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
