--- a/dashboard.html
+++ b/dashboard.html
@@ -30,176 +30,159 @@
             <span></span>
         </div>
     </nav>
-    <section>
-        <div class="study-monitor">
-            <div class="study-status">
-                <h1>My Dashboard</h1>
-            </div>
-            <div class="study-quartile">
-                <h1>&#8226 Overall &#8226</h1>
-                <div class="nbsa-study-cards">
-                    <div class="nbsa-study-cards-item">
-                        <div class="nbsa-study-cards-progress"></div>
-                        <h2 class="nbsa-study-class-percentage">0</h2>
+    <main>
+        <section>
+            <div class="study-monitor">
+                <div class="study-status">
+                    <h1>My Dashboard</h1>
+                </div>
+                <div class="study-quartile">
+                    <h1>&#8226 Overall &#8226</h1>
+                    <div class="nbsa-study-cards">
+                        <div class="nbsa-study-cards-item">
+                            <div class="nbsa-study-cards-info">
+                                <h2>NBSA Boundary</h2>
+                                <div class="nbsa-study-cards-progress"></div>
+                            </div>
+                            <h2 class="nbsa-study-class-percentage">0</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="study-quartile">
+                    <h1>&#8226 The Entire Year &#8226</h1>
+                    <div class="study-cards">
+                        <div class="study-cards-item">
+                            <div class="study-cards-info">
+                                <h2>Personal Professional Development</h2>
+                                <p><b>12.5</b> EC</p>
+                                <p>Portofolio</p>
+                                <div class="study-cards-progress"></div>
+                            </div>
+                            <h2 class="study-class-percentage">0</h2>
+                        </div>
+                        <div class="study-cards-item">
+                            <div class="study-cards-info">
+                                <h2>IT Personality</h2>
+                                <p><b>2.5</b> EC</p>
+                                <p>Portofolio</p>
+                                <div class="study-cards-progress"></div>
+                            </div>
+                            <h2 class="study-class-percentage">0</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="study-quartile">
+                    <h1>&#8226 Whenever &#8226</h1>
+                    <div class="study-cards">
+                        <div class="study-cards-item">
+                            <div class="study-cards-info">
+                                <h2>Personality 1</h2>
+                                <p><b>1.25</b> EC</p>
+                                <p>Portofolio</p>
+                                <div class="study-cards-progress"></div>
+                            </div>
+                            <h2 class="study-class-percentage">0</h2>
+                        </div>
+                        <div class="study-cards-item">
+                            <div class="study-cards-info">
+                                <h2>Personality 2</h2>
+                                <p><b>1.25</b> EC</p>
+                                <p>Portofolio</p>
+                                <div class="study-cards-progress"></div>
+                            </div>
+                            <h2 class="study-class-percentage">0</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="study-quartile">
+                    <h1>&#8226 Quartile 1 &#8226</h1>
+                    <div class="study-cards">
+                        <div class="study-cards-item">
+                            <div class="study-cards-info">
+                                <h2>Programme and Career Orientation</h2>
+                                <p><b>2.5</b> EC</p>
+                                <p>Assesment</p>
+                                <div class="study-cards-progress"></div>
+                            </div>
+                            <h2 class="study-class-percentage">0</h2>
+                        </div>
+                        <div class="study-cards-item">
+                            <div class="study-cards-info">
+                                <h2>Computer Science Basics</h2>
+                                <p><b>5</b> EC</p>
+                                <p>Written Exam</p>
+                                <div class="study-cards-progress"></div>
+                            </div>
+                            <h2 class="study-class-percentage">0</h2>
+                        </div>
+                        <div class="study-cards-item">
+                            <div class="study-cards-info">
+                                <h2>Programming Basics</h2>
+                                <p><b>5</b> EC</p>
+                                <p>Case Study Exam</p>
+                                <div class="study-cards-progress"></div>
+                            </div>
+                            <h2 class="study-class-percentage">0</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="study-quartile">
+                    <h1>&#8226 Quartile 2 &#8226</h1>
+                    <div class="study-cards">
+                        <div class="study-cards-item">
+                            <div class="study-cards-info">
+                                <h2>Object Oriented <br> Programming</h2>
+                                <p><b>10</b> EC</p>
+                                <p>Case Study and Project</p>
+                                <div class="study-cards-progress"></div>
+                            </div>
+                            <h2 class="study-class-percentage">0</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="study-quartile">
+                    <h1>&#8226 Quartile 3 &#8226</h1>
+                    <div class="study-cards">
+                        <div class="study-cards-item">
+                            <div class="study-cards-info">
+                                <h2>Framework Development 1</h2>
+                                <p><b>5</b> EC</p>
+                                <p>Case Study Exam</p>
+                                <div class="study-cards-progress"></div>
+                            </div>
+                            <h2 class="study-class-percentage">0</h2>
+                        </div>
+                        <div class="study-cards-item">
+                            <div class="study-cards-info">
+                                <h2>Framework Project 1</h2>
+                                <p><b>7.5</b> EC</p>
+                                <p>Project, Assessment, and Report</p>
+                                <div class="study-cards-progress"></div>
+                            </div>
+                            <h2 class="study-class-percentage">0</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="study-quartile">
+                    <h1>&#8226 Quartile 4 &#8226</h1>
+                    <div class="study-cards">
+                        <div class="study-cards-item">
+                            <div class="study-cards-info">
+                                <h2>Framework Project 2</h2>
+                                <p><b>10</b> EC</p>
+                                <p>Portofolio, Project, and Assessment</p>
+                                <div class="study-cards-progress"></div>
+                            </div>
+                            <h2 class="study-class-percentage">0</h2>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="study-quartile">
-                <h1>&#8226 Starter &#8226</h1>
-                <div class="study-cards">
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>HZ Personality</h2>
-                            <p><b>2.5</b> EC</p>
-                            <p>Portofolio</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>IT Personality</h2>
-                            <p><b>2.5</b> EC</p>
-                            <p>Portofolio</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="study-quartile">
-                <h1>&#8226 Quartile 1 &#8226</h1>
-                <div class="study-cards">
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Programme and Career Orientation</h2>
-                            <p><b>2.5</b> EC</p>
-                            <p>Assesment</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Computer Science Basics</h2>
-                            <p><b>7.5</b> EC</p>
-                            <p>Written Exam</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Programming Basics</h2>
-                            <p><b>5</b> EC</p>
-                            <p>Case Study Exam</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="study-quartile">
-                <h1>&#8226 Quartile 2 &#8226</h1>
-                <div class="study-cards">
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Object Oriented <br> Programming</h2>
-                            <p><b>10</b> EC</p>
-                            <p>Case Study and Project</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Professional Skills 1</h2>
-                            <p><b>2.5</b> EC</p>
-                            <p>Portofolio Exam</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="study-quartile">
-                <h1>&#8226 Quartile 3 &#8226</h1>
-                <div class="study-cards">
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Framework Project 1</h2>
-                            <p><b>5</b> EC</p>
-                            <p>2 Portofolio Exams</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Framework Development 1</h2>
-                            <p><b>5</b> EC</p>
-                            <p>Case Study</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Professional Working Environtment</h2>
-                            <p><b>2.5</b> EC</p>
-                            <p>Assessment</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Professional Skills 2</h2>
-                            <p><b>2.5</b> EC</p>
-                            <p>Portofolio Exam and 2 Written Exams</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="study-quartile">
-                <h1>&#8226 Quartile 4 &#8226</h1>
-                <div class="study-cards">
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Framework Project 2</h2>
-                            <p><b>5</b> EC</p>
-                            <p>Portofolio Exam</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Framework Development 2</h2>
-                            <p><b>5</b> EC</p>
-                            <p>Portofolio Exam</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                            <h2>Professional Skills 2</h2>
-                            <p><b>2.5</b> EC</p>
-                            <p>Portofolio Exam and 2 Written Exams</p>
-                            <div class="study-cards-progress"></div>
-                        </div>
-                        <h2 class="study-class-percentage">0</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
     <footer>
         <article class="footer-content">
-            <h3>Showcase Website</h3>
+            <h3>Alessandro Ryo</h3>
             <p>This is my showcase website</p>
             <ul class="social-media">
                 <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
