--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
             <div class="index-main-text-container">
                 <h1>HBO-ICT?<br>Why?</h1>
                 <p>Why did I choose the HBO-ICT? What motivates me?
-                Before that, you can see my profile first.</p>
-                <a href="profile.html">Look at my profile</a>
+                <br>Before that, you can see my profile first.</p>
+                <a href="profile.html" class="user-button-text">Look at my profile</a>
+                <a href="profile.html" class="user-icon"><i class="fa fa-user"></i> ></a>
             </div>
             <div> 
                 <img src="resources/home-image-1.png" class="index-main-image-container">
