--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,7 @@
             <article div class="profile-row">
                 <article class="profile-col">
                     <h3>Where do I came from?</h3>
-                    <p>I come from Indonesia</p>
+                    <p>I came from Indonesia</p>
                 </article>
                 <article class="profile-col">
                     <h3>What are my hobbies?</h3>
