--- a/dashboard.html
+++ b/dashboard.html
@@ -131,7 +131,7 @@
                     <div class="study-cards">
                         <div class="study-cards-item">
                             <div class="study-cards-info">
-                                <h2>Object Oriented <br> Programming</h2>
+                                <h2>Object Oriented Programming</h2>
                                 <p><b>10</b> EC</p>
                                 <p>Case Study and Project</p>
                                 <div class="study-cards-progress"></div>
