--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is homepage of ">
     <title>Home | Alessandro Ryo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +16,7 @@
 <body>
     <nav>
         <figure class="main-logo">
-            <img src="resources/main-logo.png">
+            <img src="resources/main-logo.png" alt="Alessandro Ryo logo">
         </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -32,16 +33,16 @@
         </div>
     </nav>
     <header class="index-header">
-            <div class="index-main-text-container">
+            <article class="index-main-text-container">
                 <h1>HBO-ICT?<br>Why?</h1>
                 <p>Why did I choose the HBO-ICT? What motivates me?
                 <br>Before that, you can see my profile first.</p>
                 <a href="profile.html" class="user-button-text">Look at my profile</a>
                 <a href="profile.html" class="user-icon"><i class="fa fa-user"></i> ></a>
-            </div>
-            <div> 
-                <img src="resources/home-image-1.png" class="index-main-image-container">
-            </div>
+            </article>
+            <figure> 
+                <img src="resources/home-image-1.png" class="index-main-image-container" alt="HBO ICT in HZ University of Applied Sciences">
+            </figure>
     </header>
     <main>
         <section class="index">
@@ -54,7 +55,7 @@
                 For more experience see my <a href="blog.html">blog</a>.</p>
                 <h3>My other opinions...</h3>
             </article>
-            <article class="index-row">
+            <div class="index-row">
                 <article class="index-col">
                     <h3>Passion</h3>
                     <p>Choosing HBO-ICT is my life choice and my passion is in this major.</p>
@@ -67,7 +68,7 @@
                     <h3>Parent Experience</h3>
                     <p>My father have worked in IT for more than 20 years and I am often told about my father day-to-day experiences working in IT.</p>
                 </article>
-            </article>
+            </div>
         </section>
     </main>
     <footer>
@@ -83,7 +84,7 @@
         <article class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
         </article>
-    </footer>  -->
+    </footer>
     <script src="js/script.js"></script>
     </body>
 </html>
